--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
+    "lint": "eslint \"src/**/*.{ts,vue}\""
   },
   "dependencies": {
     "ts-loader": "^3.2.0",
@@ -22,6 +23,8 @@
   "devDependencies": {
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
+    "eslint": "^4.14.0",
+    "eslint-plugin-vue": "^4.0.0-beta.4",
     "file-loader": "^1.1.4",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
