--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,8 @@
 {
+  "parser": "vue-eslint-parser",
+  "parserOptions": {
+    "parser": "typescript-eslint-parser"
+  },
   "extends": [
     "eslint:recommended",
     "plugin:vue/recommended"
