upgrade vue-eslint-parser

--- a/package.json
+++ b/package.json
@@ -24,12 +24,11 @@
     "eslint": "^4.14.0",
     "eslint-config-typescript": "^1.0.2",
     "eslint-plugin-typescript": "^0.8.1",
-    "eslint-plugin-vue": "^4.0.0-beta.4",
+    "eslint-plugin-vue": "^4.0.0",
     "file-loader": "^1.1.4",
     "ts-loader": "^3.2.0",
     "typescript": "^2.6.2",
     "typescript-eslint-parser": "^11.0.0",
-    "vue-eslint-parser": "^v2.0.1-beta.3",
     "vue-loader": "^13.0.5",
     "vue-template-compiler": "^2.4.4",
     "webpack": "^3.6.0",
